appId: tv.brunstad.app
---
- runScript: scripts/.env.js
- runFlow: subflows/init.yml
# Login
- retry:
    maxRetries: 3
    commands:
      - stopApp: tv.brunstad.app
      - runFlow: subflows/login.yml

# STOPPED TESTS
# ---
- stopApp: tv.brunstad.app
- openLink: "https://app.bcc.media/r/donation"
- assertVisible:
    id: "TabBarItemTitle"
- assertVisible: "Email.*"
- launchApp:
    appId: "tv.brunstad.app"
    stopApp: false
- assertNotVisible: .*Something went wrong.*
- assertVisible: .*Home.*
# ---
- stopApp: tv.brunstad.app
- openLink: "https://app.bcc.media/episode/769"
- assertVisible: .*Joseph.*
# ---
- stopApp: tv.brunstad.app
- openLink: "https://app.bcc.media/episode/51/769"
- assertVisible: .*Joseph.*
# ---
- stopApp: tv.brunstad.app
- openLink: "https://app.bcc.media/shorts/206488a5-f44c-4e11-b746-287d25e8a914"
- assertVisible: .*Playing..*
- assertNotVisible: .*Error.*
# ---
- stopApp: tv.brunstad.app
- openLink: "https://app.bcc.media/show/106"
- assertVisible: .*Summer.*

# BACKGROUND TESTS
# ---
- runFlow: subflows/home.yml
- openLink: "https://app.bcc.media/r/donation"
- assertVisible:
    id: "TabBarItemTitle"
- assertVisible: "Email.*"
- launchApp:
    appId: "tv.brunstad.app"
    stopApp: false
- assertNotVisible: .*Something went wrong.*
- assertVisible: .*Home.*
# ---
- runFlow: subflows/home.yml
- openLink: "https://app.bcc.media/episode/769"
- assertVisible: .*Joseph.*
# ---
- runFlow: subflows/home.yml
- openLink: "https://app.bcc.media/episode/51/769"
- assertVisible: .*Joseph.*
# ---
- runFlow: subflows/home.yml
- openLink: "https://app.bcc.media/shorts/206488a5-f44c-4e11-b746-287d25e8a914"
- assertVisible: .*Playing..*
- tapOn:
    point: "50%,50%"
- assertVisible: .*Paused..*
- assertNotVisible: .*Error.*
# ---
- runFlow: subflows/home.yml
- openLink: "https://app.bcc.media/show/106"
- assertVisible: .*Summer.*

# FOREGROUND TESTS
# ---
- openLink: "https://app.bcc.media/r/donation"
- assertVisible:
    id: "TabBarItemTitle"
- assertVisible: "Email.*"
- launchApp:
    appId: "tv.brunstad.app"
    stopApp: false
- assertNotVisible: .*Something went wrong.*
- assertVisible: .*Home.*
# ---
- openLink: "https://app.bcc.media/episode/769"
- assertVisible: .*Joseph.*
# ---
- openLink: "https://app.bcc.media/episode/51/769"
- assertVisible: .*Joseph.*
# ---
- openLink: "https://app.bcc.media/shorts/206488a5-f44c-4e11-b746-287d25e8a914"
- assertVisible: .*Playing..*
- assertNotVisible: .*Error.*
# ---
- openLink: "https://app.bcc.media/show/106"
- assertVisible: .*Summer.*
