appId: tv.brunstad.app
---
- swipe:
    start: 50%, 1%
    end: 50%, 90%
- tapOn:
    id: "NotificationShortLookView"
- swipe:
    from:
      text: .*${CONTAINING}.*
    direction: RIGHT # To (50% of width, 10% of height)
- tapOn:
    id: "swipe-action-button-identifier"
    optional: true
