appId: tv.brunstad.app
---
- tapOn:
    id: "More Controls"
- tapOn: "Languages"
- assertVisible:
    text: ".*German.*"
    #selected: true
